Add reproducibility code and change min delta to 0

--- a/model.ipynb
+++ b/model.ipynb
@@ -623,15 +623,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "1rasqjnO6mAq",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c984e9d2-8782-4383-ee3f-a15c51045797"
+        "colab": {}
       },
       "source": [
         "import numpy as np\n",
-        "np.random.seed(1337) # for reproducibility\n",
         "from pydub import AudioSegment\n",
         "from pydub.playback import play\n",
         "import random\n",
@@ -656,18 +651,38 @@
         "from keras.layers import GRU, Bidirectional, BatchNormalization, Reshape, ConvLSTM2D, Lambda\n",
         "from keras.optimizers import Adam\n",
         "from keras.callbacks.callbacks import EarlyStopping\n",
-        "from sklearn.utils import class_weight"
+        "from sklearn.utils import class_weight\n",
+        "\n",
+        "# For reproducibility\n",
+        "# The below is necessary for starting Numpy generated random numbers\n",
+        "# in a well-defined initial state.\n",
+        "\n",
+        "np.random.seed(1337)\n",
+        "\n",
+        "# The below is necessary for starting core Python generated random numbers\n",
+        "# in a well-defined state.\n",
+        "\n",
+        "random.seed(12345)\n",
+        "\n",
+        "# Force TensorFlow to use single thread.\n",
+        "# Multiple threads are a potential source of non-reproducible results.\n",
+        "# For further details, see: https://stackoverflow.com/questions/42022950/\n",
+        "\n",
+        "session_conf = tf.compat.v1.ConfigProto(intra_op_parallelism_threads=1,\n",
+        "                              inter_op_parallelism_threads=1)\n",
+        "\n",
+        "# The below tf.set_random_seed() will make random number generation\n",
+        "# in the TensorFlow backend have a well-defined initial state.\n",
+        "# For further details, see:\n",
+        "# https://www.tensorflow.org/api_docs/python/tf/set_random_seed\n",
+        "\n",
+        "tf.random.set_seed(1234)\n",
+        "\n",
+        "sess = tf.compat.v1.Session(graph=tf.compat.v1.get_default_graph(), config=session_conf)\n",
+        "tf.compat.v1.keras.backend.set_session(sess)\n"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -923,51 +938,54 @@
       "metadata": {
         "colab_type": "code",
         "id": "D3Sfny3t78rK",
-        "outputId": "23583993-fe92-4580-fc46-624f843b30d0",
+        "outputId": "cc7597cd-ac87-42ef-8ff6-7a992edd147e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 612
+          "height": 663
         }
       },
       "source": [
         "model = create_gru(input_shape = (Tx, n_freq), output_bias = None)\n",
         "model.summary()"
       ],
-      "execution_count": 48,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
-            "Model: \"model_2\"\n",
+            "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
+            "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
+            "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
+            "Model: \"model_1\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_2 (InputLayer)         (None, 5490, 129)         0         \n",
+            "input_1 (InputLayer)         (None, 5490, 129)         0         \n",
             "_________________________________________________________________\n",
-            "conv1d_2 (Conv1D)            (None, 1369, 196)         379456    \n",
+            "conv1d_1 (Conv1D)            (None, 1369, 196)         379456    \n",
             "_________________________________________________________________\n",
-            "batch_normalization_4 (Batch (None, 1369, 196)         784       \n",
+            "batch_normalization_1 (Batch (None, 1369, 196)         784       \n",
             "_________________________________________________________________\n",
-            "activation_2 (Activation)    (None, 1369, 196)         0         \n",
+            "activation_1 (Activation)    (None, 1369, 196)         0         \n",
             "_________________________________________________________________\n",
-            "dropout_5 (Dropout)          (None, 1369, 196)         0         \n",
+            "dropout_1 (Dropout)          (None, 1369, 196)         0         \n",
             "_________________________________________________________________\n",
-            "gru_3 (GRU)                  (None, 1369, 128)         124800    \n",
+            "gru_1 (GRU)                  (None, 1369, 128)         124800    \n",
             "_________________________________________________________________\n",
-            "dropout_6 (Dropout)          (None, 1369, 128)         0         \n",
+            "dropout_2 (Dropout)          (None, 1369, 128)         0         \n",
             "_________________________________________________________________\n",
-            "batch_normalization_5 (Batch (None, 1369, 128)         512       \n",
+            "batch_normalization_2 (Batch (None, 1369, 128)         512       \n",
             "_________________________________________________________________\n",
-            "gru_4 (GRU)                  (None, 1369, 128)         98688     \n",
+            "gru_2 (GRU)                  (None, 1369, 128)         98688     \n",
             "_________________________________________________________________\n",
-            "dropout_7 (Dropout)          (None, 1369, 128)         0         \n",
+            "dropout_3 (Dropout)          (None, 1369, 128)         0         \n",
             "_________________________________________________________________\n",
-            "batch_normalization_6 (Batch (None, 1369, 128)         512       \n",
+            "batch_normalization_3 (Batch (None, 1369, 128)         512       \n",
             "_________________________________________________________________\n",
-            "dropout_8 (Dropout)          (None, 1369, 128)         0         \n",
+            "dropout_4 (Dropout)          (None, 1369, 128)         0         \n",
             "_________________________________________________________________\n",
-            "time_distributed_2 (TimeDist (None, 1369, 1)           129       \n",
+            "time_distributed_1 (TimeDist (None, 1369, 1)           129       \n",
             "=================================================================\n",
             "Total params: 604,881\n",
             "Trainable params: 603,977\n",
@@ -983,29 +1001,57 @@
       "metadata": {
         "id": "mgy-5sXvdo25",
         "colab_type": "code",
-        "outputId": "ed7c91a4-ffc4-48f5-e167-f46ebf6533c9",
+        "outputId": "396a8bdb-36fa-4364-d621-bbf8023893fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 331
+          "height": 595
         }
       },
       "source": [
         "model = create_convlstm2d(input_shape = (Tx, n_freq))\n",
         "model.summary()"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-24b5f5000c6b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_convlstm2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mTx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_freq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-5-683f07e39920>\u001b[0m in \u001b[0;36mcreate_convlstm2d\u001b[0;34m(input_shape, output_bias, dropout)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mX_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLambda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand_dims\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_input\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLambda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand_dims\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# X = keras.backend.expand_dims(X, axis = 1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'keras' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Tensor(\"lambda_2/ExpandDims:0\", shape=(None, 1, 5490, 1, 129), dtype=float32)\n",
+            "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
+            "Model: \"model_2\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_2 (InputLayer)         (None, 5490, 129)         0         \n",
+            "_________________________________________________________________\n",
+            "lambda_1 (Lambda)            (None, 5490, 1, 129)      0         \n",
+            "_________________________________________________________________\n",
+            "lambda_2 (Lambda)            (None, 1, 5490, 1, 129)   0         \n",
+            "_________________________________________________________________\n",
+            "bidirectional_1 (Bidirection (None, 1, 1369, 1, 392)   7645568   \n",
+            "_________________________________________________________________\n",
+            "dropout_5 (Dropout)          (None, 1, 1369, 1, 392)   0         \n",
+            "_________________________________________________________________\n",
+            "batch_normalization_4 (Batch (None, 1, 1369, 1, 392)   1568      \n",
+            "_________________________________________________________________\n",
+            "bidirectional_2 (Bidirection (None, 1, 1369, 1, 392)   923552    \n",
+            "_________________________________________________________________\n",
+            "dropout_6 (Dropout)          (None, 1, 1369, 1, 392)   0         \n",
+            "_________________________________________________________________\n",
+            "batch_normalization_5 (Batch (None, 1, 1369, 1, 392)   1568      \n",
+            "_________________________________________________________________\n",
+            "dropout_7 (Dropout)          (None, 1, 1369, 1, 392)   0         \n",
+            "_________________________________________________________________\n",
+            "time_distributed_2 (TimeDist (None, 1, 1369, 1, 1)     393       \n",
+            "_________________________________________________________________\n",
+            "reshape_1 (Reshape)          (None, 1369, 1)           0         \n",
+            "=================================================================\n",
+            "Total params: 8,572,649\n",
+            "Trainable params: 8,571,081\n",
+            "Non-trainable params: 1,568\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -1202,7 +1248,7 @@
         "    ]\n",
         "\n",
         "    es = keras.callbacks.callbacks.EarlyStopping(monitor='val_loss', \n",
-        "                                            min_delta=0.05, \n",
+        "                                            min_delta=0, \n",
         "                                            patience=20, \n",
         "                                            verbose=1, \n",
         "                                            mode='auto', \n",
