Fix bugs in hyperparam optimization functions

--- a/model.ipynb
+++ b/model.ipynb
@@ -1412,7 +1412,7 @@
    ],
    "source": [
     "X_dev = np.load(PROJ_PATH + \"data/dev_synthesised/text_to_speech/X_Random_Voices.npy\")\n",
-    "Y_dev = np.load(PROJ_PATH + \"data/dev_synthesised/text_to_speech/X_Random_Voices.npy\")\n",
+    "Y_dev = np.load(PROJ_PATH + \"data/dev_synthesised/text_to_speech/Y_Random_Voices.npy\")\n",
     "print(\"X: {} Y: {}\".format(X_dev.shape, Y_dev.shape))"
    ]
   },
@@ -2402,10 +2402,10 @@
     "    \"\"\"\n",
     "    results = {}\n",
     "    best_f1 = 0\n",
-    "    best_model = create_gru(input_shape = (Tx, n_freq), output_bias = None, dropout=dropout)\n",
+    "    best_model = create_bilstm(input_shape = (Tx, n_freq), output_bias = None, dropout=dropout)\n",
     "    \n",
     "    for lr_cur in lr_range:\n",
-    "        model = create_gru(input_shape = (Tx, n_freq), output_bias = None, dropout=dropout)\n",
+    "        model = create_bilstm(input_shape = (Tx, n_freq), output_bias = None, dropout=dropout)\n",
     "\n",
     "        es = keras.callbacks.callbacks.EarlyStopping(monitor='val_loss', \n",
     "                                                min_delta=0.05, \n",
@@ -2428,9 +2428,10 @@
     "            best_f1 = f1_score\n",
     "            best_model = model\n",
     "        \n",
-    "        results[f'LR: {lr}'] = {\n",
+    "        results[f'LR: {lr_cur}'] = {\n",
     "            'f1': f1_score,\n",
-    "            'history': history\n",
+    "            'loss': history.history['loss'][-1],\n",
+    "            'val_loss': history.history['val_loss'][-1]\n",
     "        }\n",
     "    \n",
     "    return results, best_model"
@@ -2456,10 +2457,10 @@
     "    \"\"\"\n",
     "    results = {}\n",
     "    best_f1 = 0\n",
-    "    best_model = create_gru(input_shape = (Tx, n_freq), output_bias = None)\n",
+    "    best_model = create_bilstm(input_shape = (Tx, n_freq), output_bias = None)\n",
     "    \n",
     "    for dropout_cur in dropout_range:\n",
-    "        model = create_gru(input_shape = (Tx, n_freq), output_bias = None, dropout=dropout_cur)\n",
+    "        model = create_bilstm(input_shape = (Tx, n_freq), output_bias = None, dropout=dropout_cur)\n",
     "\n",
     "        es = keras.callbacks.callbacks.EarlyStopping(monitor='val_loss', \n",
     "                                                min_delta=0.05, \n",
@@ -2482,9 +2483,10 @@
     "            best_f1 = f1_score\n",
     "            best_model = model\n",
     "        \n",
-    "        results[f'LR: {lr}'] = {\n",
+    "        results[f'Dropout: {dropout_cur}'] = {\n",
     "            'f1': f1_score,\n",
-    "            'history': history\n",
+    "            'loss': history.history['loss'][-1],\n",
+    "            'val_loss': history.history['val_loss'][-1]\n",
     "        }\n",
     "    \n",
     "    return results, best_model"
@@ -2536,7 +2538,7 @@
    "source": [
     "model_name = 'bryan_concat_GRU_vary_lr'\n",
     "\n",
-    "results, best_model = hyperparam_optimize_lr(X, Y, X_dev, Y_dev, X_test, Y_test, 0.8, lr_range)\n",
+    "results, best_model = hyperparam_optimize_lr(X, Y, X_dev, Y_dev, X_test_dev, Y_test_dev, 0.8, lr_range)\n",
     "\n",
     "# Save object and model\n",
     "best_model(metric='val_loss', asc=True).save(PROJ_PATH + f\"models/hyperparam_scan_data/{model_name}.h5\")\n",
